--- a/xindex.html
+++ b/xindex.html
@@ -54,7 +54,7 @@
     <td height="30" valign="bottom" colspan="3" width="598"></td>
   </tr>
   <tr>
-    <td height="65" valign="middle" colspan="3" width="598"><p align="center"><small>©
+    <td height="65" valign="middle" colspan="3" width="598"><p align="center"><small>Â©
     Copyright 2001-2018 Torrey Pines Software, Inc.<br>
     Last updated on August 23, 2018</small></td>
   </tr>
