--- a/localmap.htm
+++ b/localmap.htm
@@ -53,9 +53,9 @@
     <td height="24" valign="bottom" colspan="2" width="598"></td>
   </tr>
   <tr>
-    <td height="65" valign="middle" colspan="2" width="598"><p align="center"><small>©
-        Copyright 2001-2011 Torrey Pines Software, Inc.<br>
-    Last updated on September 12, 2011</small></td>
+    <td height="65" valign="middle" colspan="2" width="598"><p align="center"><small>Â©
+        Copyright 2001-2019 Torrey Pines Software, Inc.<br>
+    Last updated on December 29, 2019</small></td>
   </tr>
 </table>
 </body>
