--- a/our_museum.htm
+++ b/our_museum.htm
@@ -305,9 +305,9 @@
     <td height="24" valign="bottom" colspan="3" width="606"></td>
   </tr>
   <tr>
-    <td height="65" valign="middle" colspan="3" width="606"><p align="center"><small>©
+    <td height="65" valign="middle" colspan="2" width="598"><p align="center"><small>Â©
         Copyright 2001-2019 Torrey Pines Software, Inc.<br>
-    Last updated on August 5, 2019</small></td>
+    Last updated on December 29, 2019</small></td>
   </tr>
 </table>
 </body>
