--- a/our_expertise_and_goals.htm
+++ b/our_expertise_and_goals.htm
@@ -68,8 +68,8 @@
     <td height="24" valign="bottom" colspan="3" width="598"></td>
   </tr>
   <tr>
-    <td height="65" valign="middle" colspan="2" width="598"><p align="center"><small>©
-        Copyright 2001-2019 Torrey Pines Software, Inc.<br>
+    <td height="70"><p align="center"><small>©
+    Copyright 2001-2019 Torrey Pines Software, Inc.<br>
     Last updated on December 29, 2019</small></td>
   </tr>
 </table>
