--- a/our_clients.htm
+++ b/our_clients.htm
@@ -149,7 +149,7 @@
 
 <table border="0" cellpadding="0" cellspacing="0" width="600" height="70">
   <tr>
-    <td height="65" valign="middle" colspan="2" width="598"><p align="center"><small>©
+    <td height="70"><p align="center"><small>©
         Copyright 2001-2019 Torrey Pines Software, Inc.<br>
     Last updated on December 29, 2019</small></td>
   </tr>
