--- a/useful.htm
+++ b/useful.htm
@@ -49,7 +49,7 @@
     <td height="24" valign="bottom" colspan="3" width="598"></td>
   </tr>
   <tr>
-    <td height="65" valign="middle" colspan="2" width="598"><p align="center"><small>©
+    <td height="70"><p align="center"><small>©
         Copyright 2001-2019 Torrey Pines Software, Inc.<br>
     Last updated on December 29, 2019</small></td>
   </tr>
