--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 		<a href="images/acm_logo.gif">
 			<img align="left" alt="ACM Logo" border="0" src="images/acm_logo.gif" width="96" height="95"><p>
 		</a>
+		<a href="images/anti-if.gif">
+			<img align="left" alt="ACM Logo" border="0" src="images/anti-if.gif" width="96" height="95"><p>
+		</a>
 	
 		<a href="https://francescocirillo.com/pages/anti-if-campaign">
 			<img height="60" width="120"
