--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<img align="left" alt="ACM Logo" border="0" src="images/acm_logo.gif" width="96" height="95"><p>
 		</a>
 		<a href="images/anti-if.gif">
-			<img align="left" alt="ACM Logo" border="0" src="images/anti-if.gif" width="96" height="95"><p>
+			<img align="left" alt="Anti-If Logo" border="0" src="images/anti-if.gif" width="96" height="95"><p>
 		</a>
 	
 		<a href="https://francescocirillo.com/pages/anti-if-campaign">
