--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
 			<img align="left" alt="ACM Logo" border="0" src="images/acm_logo.gif" width="96" height="95"><p>
 		</a>
 		<a href="images/anti-if.gif">
-			<img align="left" alt="Anti-If Logo" border="0" src="images/anti-if.gif" width="96" height="95"><p>
+			<img align="left" alt="Anti-If Logo" border="0" src="images/anti-if.gif"><p>
 		</a>
 	
-		<a href="https://francescocirillo.com/pages/anti-if-campaign">
+		<!--<a href="https://francescocirillo.com/pages/anti-if-campaign">
 			<img height="60" width="120"
 				src="http://cdn.shopify.com/s/files/1/0257/1675/t/147/assets/banner_ive-joined.gif"
 				alt="I have joined Anti-IF Campaign">
-		</a>
+		</a>-->
 	</td>
    
     <td width="454" height="92" valign="middle" colspan="2"><font size="1">Torrey
