--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 		</a>-->
 	</td>
    
-    <td width="454" height="92" valign="middle" colspan="2"><font size="1">Torrey
+    <!-- <td width="454" height="92" valign="middle" colspan="2"><font size="1">Torrey
       Pines Software is a proud user of <a href="http://www.pc.ibm.com/ww/thinkpad/choose_country.html">Lenovo
       Thinkpads</a>. Thinkpads are well-built, well-supported machines. On
       numerous occasions, Lenovo's support has been vigorous and tenacious, even
       under difficult circumstances. Lenovo's fine service more than justifies
       preferring Thinkpads over any other product. We're pleased to be their
-      customer.</font></td>
+      customer.</font></td> -->
   </tr>
 </table>
 </body>
