--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     <td height="30" valign="bottom" colspan="3" width="598"></td>
   </tr>
   <tr>
-    <td height="65" valign="middle" colspan="3" width="598"><p align="center"><small>©
-    Copyright 2001-2019 Torrey Pines Software, Inc.<br>
-    Last updated on January 13, 2020</small></td>
+    <td height="65" valign="middle" colspan="3" width="598"><p align="center"><small>&copy;
+    Copyright 2001-2020 Torrey Pines Software, Inc.<br>
+    Last updated on May 6, 2020</small></td>
   </tr>
   <tr>
     <td height="11" valign="bottom" colspan="3" width="598"></td>
