--- a/our_clients.htm
+++ b/our_clients.htm
@@ -149,9 +149,9 @@
 
 <table border="0" cellpadding="0" cellspacing="0" width="600" height="70">
   <tr>
-    <td height="70"><p align="center"><small>©
-        Copyright 2001-2019 Torrey Pines Software, Inc.<br>
-    Last updated on December 29, 2019</small></td>
+    <td height="70"><p align="center"><small>&copy;
+    Copyright 2001-2020 Torrey Pines Software, Inc.<br>
+    Last updated on May 6, 2020</small></td>
   </tr>
 </table>
 </body>
