--- a/our_expert_witness_work.htm
+++ b/our_expert_witness_work.htm
@@ -97,9 +97,9 @@
     available upon request. To contact Barry directly, send an e-mail to <a href="mailto:bdemchak@tpsoft.com">bdemchak@tpsoft.com</a>.</td>
   </tr>
   <tr>
-  <td height="70"><p align="center"><small>©
-  Copyright 2001-2019 Torrey Pines Software, Inc.<br>
-    Last updated on December 29, 2019</small></td>
+  <td height="70"><p align="center"><small>&copy;
+    Copyright 2001-2020 Torrey Pines Software, Inc.<br>
+    Last updated on May 6, 2020</small></td>
   </tr>
 </table>
 </body>
