--- a/useful.htm
+++ b/useful.htm
@@ -49,9 +49,9 @@
     <td height="24" valign="bottom" colspan="3" width="598"></td>
   </tr>
   <tr>
-    <td height="70"><p align="center"><small>©
-        Copyright 2001-2019 Torrey Pines Software, Inc.<br>
-    Last updated on December 29, 2019</small></td>
+    <td height="70"><p align="center"><small>&copy;
+    Copyright 2001-2020 Torrey Pines Software, Inc.<br>
+    Last updated on May 6, 2020</small></td>
   </tr>
 </table>
 </body>
